<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutPatternLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPatternLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/size_of_pattern"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutPinLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPinNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_dots"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutPinTries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPinTries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maximum_number_of_tries"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:id="@+id/layoutPatternHide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hide_trail"
            android:id="@+id/cbPatternHide"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>