<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="?android:attr/buttonBarStyle"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:divider="?android:attr/dividerHorizontal"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:showDividers="middle"
              tools:context=".android.OptionsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:minWidth="@dimen/pin_keypad_width"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/layoutForm">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etServer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/odyssey_url"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vUserid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etUserid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userid"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <Switch
                android:id="@+id/swRememberPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_password"
                style="@android:style/TextAppearance.Medium"/>

            <TextView
                android:id="@+id/tvWarning"
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/you_can_try_after_seconds"
                android:textColor="@android:color/holo_red_dark"/>
        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pbLogin"
            android:layout_centerInParent="true"
            android:indeterminate="false"/>
    </RelativeLayout>

</LinearLayout>