<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.pantheon_inc.odyssey.android.helpers.OdysseyWebView
                android:id="@+id/wv_odyssey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f1c4c4"
                android:layout_alignParentTop="true"
                android:visibility="gone"/>

            <ScrollView
                android:id="@+id/sv_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="false"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/username_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/odyssey_url"
                            android:inputType="textUri"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/userid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/userid"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvWarning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/error_information"
                        android:textColor="@android:color/holo_red_light"
                        android:textStyle="italic"
                        android:visibility="gone"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                </LinearLayout>
            </ScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_fatal_error"
                android:paddingTop="56dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fatal_error"
                    android:id="@+id/tv_fatal_error"
                    android:gravity="center"
                    android:textColor="@android:color/holo_red_light"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:iiv_color="@android:color/holo_red_dark"
                    app:iiv_icon="gmd-warning"
                    android:layout_above="@+id/tv_fatal_error"
                    android:layout_centerHorizontal="true"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_refresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:text="@string/refresh"
                    android:layout_below="@+id/tv_fatal_error"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>